# BHCppHPToolKit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Foudations/: MathBits.hpp
HPContainer/: PooledHashMap.hpp  PooledLinkedHashList.hpp  PooledList.hpp  PooledMap.hpp  PooledVector.hpp  RWRingQueue.hpp  SegVector.hpp
Memory/: BlockMemPool.hpp  SegmentedObjectPool.hpp
MultiPlatforms/: PlatformMemory.hpp  PlatformThread.hpp
MultiThreadAndMutex/: BHSync.hpp
cmake/: BHCppHPToolKitConfig.cmake.in
examples/find_package/: CMakeLists.txt  main.cpp
include/: BHCppHPToolKit.hpp
ports/bhcpphptoolkit/: portfile.cmake  vcpkg.json
